# AdminTable

./: .gitignore  README.md  pyproject.toml
admin_table/: __init__.py  application.py  auth.py  config.py
admin_table/modules/: __init__.py  sqlalchemy.py  sqlalchemy_module.py
admin_table/modules/bases/: __init__.py  list_resolver.py  resolver.py
admin_table/wrappers/: __init__.py  _base.py  fastapi_wrapper.py  flask_wrapper.py
example/: base.py  fastapi_simple.py  models.py
scripts/: build.sh  format.sh
ui/: index.html  package.json  vite.config.mjs
ui/.storybook/: preview.tsx
ui/src/: App.tsx  Layout.tsx  Router.tsx  RouterControl.tsx
ui/src/components/: DataField.tsx  Description.tsx  FieldTitle.tsx  Loader.tsx  Logo.tsx  MarkdownPage.tsx  SubmittableForm.tsx  UserChart.tsx  UserDefinedIcon.tsx  actionResponseHandler.ts
ui/src/components/ColorSchemeToggle/: ColorSchemeToggle.tsx
ui/src/components/DataField/: Extendable.tsx  Field.tsx  LiveValue.tsx  ValueHistory.tsx  index.tsx
ui/src/layout/navbar/: NavbarLinksGroup.tsx  NavbarNested.module.css  NavbarNested.tsx  UserButton.module.css  UserButton.tsx
ui/src/pages/: CustomPage.page.tsx  Home.page.tsx  HomeDashboard.page.tsx  InputForm.page.tsx  Login.page.tsx
ui/src/pages/ResourceCreate/: CreateResource.page.tsx  index.tsx
ui/src/pages/ResourceDetail/: Action.tsx  Field.tsx  ResourceDetail.page.tsx  SubGraph.tsx  SubTable.tsx  index.tsx
ui/src/pages/ResourceList/: FilterSelection.tsx  PageSelect.tsx  TableBody.tsx  (+4 more)
ui/src/services/: auth.ts  data.service.ts
ui/src/stores/: user.store.ts
(+4 files in other folders)
