[tool.poetry]
name = "admin-table"
version = "0.0.4"
description = "Another Dashboard Library for displaying mostly tables"
readme = "README.md"
license = "MIT"
authors = ["Adam Verner <averner@averner.cz>"]

packages = [
    {include = "admin_table"},
]
include = [
    { path = "admin_table/ui/**/*", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
fastapi = {extras = ["standard"], version = "^0.114.0"}
ruff = "^0.6.4"
sqlalchemy = "^2.0.34"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.poetry.extras]
fastapi = ["fastapi"]